made css changes to show image correctly aligned to center

--- a/webroot/css/freegal_styles.css
+++ b/webroot/css/freegal_styles.css
@@ -49,7 +49,7 @@ form, fieldset{
 .visual .heading-public-library{
 	top:21px;
 	left:215px;
-	width:270px;
+	width:300px;
 	height: 60px;
 	overflow:hidden;
 	text-align: center;
